--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-hii
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Privacy Policy - Graph AI</title>
+</head>
+<body>
+    <h1>Privacy Policy</h1>
+    <p>
+        Effective Date: August 5, 2025
+    </p>
+    <p>
+        This Privacy Policy describes how Graph AI ("we", "our", or "us") collects, uses, and protects your information when you use our app on Google Play.
+    </p>
+    <h2>Information We Collect</h2>
+    <ul>
+        <li>We do <strong>not</strong> collect any personal information from users.</li>
+        <li>We do <strong>not</strong> require you to create an account or provide personal details to use Graph AI.</li>
+    </ul>
+    <h2>Data Usage</h2>
+    <p>
+        We do not collect, store, or share any user data. All processing is done locally on your device.
+    </p>
+    <h2>Third-Party Services</h2>
+    <p>
+        Graph AI does not use any third-party services that collect user information.
+    </p>
+    <h2>Children's Privacy</h2>
+    <p>
+        Our app is suitable for all ages and does not knowingly collect any personal information from children.
+    </p>
+    <h2>Changes to This Privacy Policy</h2>
+    <p>
+        We may update our Privacy Policy from time to time. Any changes will be posted on this page.
+    </p>
+    <h2>Contact Us</h2>
+    <p>
+        If you have any questions about this Privacy Policy, please contact us at: <a href="mailto:your-email@example.com">Onelibrary001@gmail.com</a>
+    </p>
+</body>
+</html>
