--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Privacy Policy - ChartIn</title>
+    <title>Privacy Policy - ChartIN</title>
 </head>
 <body>
     <h1>Privacy Policy</h1>
@@ -10,7 +10,7 @@
         Effective Date: August 5, 2025
     </p>
     <p>
-        This Privacy Policy describes how ChrtIn ("we", "our", or "us") collects, uses, and protects your information when you use our app on Google Play.
+        This Privacy Policy describes how Ai Chart Analysis ChrtIN ("we", "our", or "us") collects, uses, and protects your information when you use our app on Google Play.
     </p>
     <h2>Information We Collect</h2>
     <ul>
