--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>Information We Collect</h2>
     <ul>
         <li>We do <strong>not</strong> collect any personal information from users.</li>
-        <li>We do <strong>not</strong> require you to create an account or provide personal details to use Graph AI.</li>
+        <li>We do <strong>not</strong> require you to create an account or provide personal details to use Ai Chart Analysis ChrtIN.</li>
     </ul>
     <h2>Data Usage</h2>
     <p>
@@ -23,7 +23,7 @@
     </p>
     <h2>Third-Party Services</h2>
     <p>
-        Graph AI does not use any third-party services that collect user information.
+        Ai Chart Analysis ChrtIN does not use any third-party services that collect user information.
     </p>
     <h2>Children's Privacy</h2>
     <p>
