--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Privacy Policy - ChartIN</title>
+    <title>Privacy Policy - ChartAI</title>
 </head>
 <body>
     <h1>Privacy Policy</h1>
@@ -10,12 +10,12 @@
         Effective Date: August 5, 2025
     </p>
     <p>
-        This Privacy Policy describes how Ai Chart Analysis ChrtIN ("we", "our", or "us") collects, uses, and protects your information when you use our app on Google Play.
+        This Privacy Policy describes how Ai Chart Analysis ChrtAI ("we", "our", or "us") collects, uses, and protects your information when you use our app on Google Play.
     </p>
     <h2>Information We Collect</h2>
     <ul>
         <li>We do <strong>not</strong> collect any personal information from users.</li>
-        <li>We do <strong>not</strong> require you to create an account or provide personal details to use Ai Chart Analysis ChrtIN.</li>
+        <li>We do <strong>not</strong> require you to create an account or provide personal details to use Ai Chart Analysis ChrtAI.</li>
     </ul>
     <h2>Data Usage</h2>
     <p>
@@ -23,7 +23,7 @@
     </p>
     <h2>Third-Party Services</h2>
     <p>
-        Ai Chart Analysis ChrtIN does not use any third-party services that collect user information.
+        Ai Chart Analysis ChrtAI does not use any third-party services that collect user information.
     </p>
     <h2>Children's Privacy</h2>
     <p>
@@ -35,7 +35,7 @@
     </p>
     <h2>Contact Us</h2>
     <p>
-        If you have any questions about this Privacy Policy, please contact us at: <a href="mailto:your-email@example.com">Onelibrary001@gmail.com</a>
+        If you have any questions about this Privacy Policy, please contact us at: <a href="mailto:Onelibrary001@gmail.com">Onelibrary001@gmail.com</a>
     </p>
 </body>
 </html>
